# xithub

./: README.md  TODO.md
client/: CMakeLists.txt  CMakeSettings.json  LICENSES.md  README.md
client/PacketReporter/: gzip.h  packet_reporter_core.cpp  packet_reporter_core.h  task_system.h
client/PacketReporter/ashita/: ashita_plugin.cpp  ashita_plugin.h  exports.def
client/PacketReporter/windower/: exports.def  windower_plugin.cpp
server/: .gitignore  0_receive_packets.py  1_process_packets.py  2_archive_packets.py  README.md
server/services/: 0_receive_packets.py  1_process_packets.py  2_archive_packets.py
server/services/sql/: packets.sql
server/services/sql/queries/: get_events.sql
server/sql/functions/: conversions.sql
server/sql/queries/: get_events.sql
server/sql/tables/: users.sql
